# anamorphic

./: .gitignore  .gitmodules  README.md  package.json  progress.txt
analysis/: privacy-report.md
benchmarks/: results.csv  results.md
circuits/: execution_proof.circom  instruction_commitment.circom  test_circuit.circom
contracts/script/: Deploy.s.sol  DeployMockAMM.s.sol
contracts/src/: Groth16Verifier.sol  MockAMM.sol  MockERC20.sol  StealthEscrow.sol
contracts/test/: MockAMM.t.sol  StealthEscrow.t.sol
relayer/: Cargo.toml
relayer/e2e-test/: Cargo.toml
relayer/e2e-test/src/: main.rs
relayer/privacy-analyzer/: Cargo.toml
relayer/privacy-analyzer/src/: main.rs
relayer/relayer/: Cargo.toml
relayer/relayer/src/: main.rs
relayer/stealth-crypto/: Cargo.toml
relayer/stealth-crypto/src/: instruction.rs  lib.rs  stealth_address.rs
scripts/: compile.sh  compile_execution_proof.sh  compute_execution_inputs.js  compute_poseidon.js  quick_benchmarks.sh  run_benchmarks.sh  setup_groth16.sh  test_execution_proof.sh  test_witness.sh
tasks/: prd-stealth-defi.md  prd.json
