[package]
name = "e2e-test"
version = "0.1.0"
edition = "2021"

[dependencies]
stealth-crypto = { path = "../stealth-crypto" }
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = "0.13"
rand = "0.8"
hex = "0.4"
